# rorochip-cookies

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.app_name}}/: cli.py
