[metadata]
name = {{ cookiecutter.app_name }}
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
url = {{ cookiecutter.project_url }}
description-file = README.md
description-content-type = text/markdown
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    {{ cookiecutter.app_name }} = {{ cookiecutter.app_name }}.cli:main
